add communicate with pt=server

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
       <br><br>
 
-      <p> PT Side Server Status: <strong>{{ptServer.state}}</strong></p>
+      <p> PT Side Server Status: <strong>{{ptServer.state}} {{ptServer.id}}</strong></p>
 
 
       <button type="button" ng-click="startServer()">Start Server</button>
