--- a/web/index.html
+++ b/web/index.html
@@ -114,6 +114,8 @@
     <!--service-->
     <script src="service/http-service.js"></script>
     <script src="service/user-service.js"></script>
+    <script src="service/torrent-service.js"></script>
+    <script src="service/socket-service.js"></script>
     <script src="service/permission-service.js"></script>
     <script src="service/form-service.js"></script>
     <script src="service/report-service.js"></script>
@@ -122,6 +124,7 @@
     <script src="app-state.js"></script>
     <script src="pages/account/login-controller.js"></script>
     <script src="pages/dashboard/dashboard-controller.js"></script>
+    <script src="pages/transmission/transmission-controller.js"></script>
     <script src="pages/report/report-controller.js"></script>
     <script src="pages/review/review-controller.js"></script>
     <script src="pages/user/user-controller.js"></script>
