--- a/web/index.html
+++ b/web/index.html
@@ -103,6 +103,7 @@
     <script src="bower_components/angular-uuid/angular-uuid.js"></script>
     <script src="bower_components/angular-file-upload/dist/angular-file-upload.min.js"></script>
     <script src="bower_components/ng-file-upload/ng-file-upload-all.min.js"></script>
+    <script src="bower_components/angular-local-storage/dist/angular-local-storage.js"></script>
     <!--<script src="bower_components/htmlparser2/lib/index.js"></script>-->
     <!--<script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>-->
     <!-- OneUI Core JS: App Related -->
@@ -128,6 +129,7 @@
     <script src="pages/report/report-controller.js"></script>
     <script src="pages/review/review-controller.js"></script>
     <script src="pages/user/user-controller.js"></script>
+    <script src="pages/setting/setting-controller.js"></script>
 
     <script src="assets/js/directives.js"></script>
     <script src="assets/js/controllers.js"></script>
