--- a/web/pages/dashboard/dashboard.html
+++ b/web/pages/dashboard/dashboard.html
@@ -30,148 +30,6 @@
 <!-- END Stats -->
 
 
-<!-- Page Content -->
-<div class="content content-boxed" ng-if="false">
-    <!-- Table Sections (data-js-table-sections attribute is initialized in js/directives.js) -->
-    <div class="block">
-        <div class="block-header">
-            <div class="block-options">
-                <!--<code>data-js-table-sections</code>-->
-            </div>
-            <h3 class="block-title">Template And Assignments</h3>
-        </div>
-        <div class="block-content">
-            <!--
-            Separate your table content with multiple tbody sections. Add one row and add the class .js-table-sections-header to a
-            tbody section to make it clickable. It will then toggle the next tbody section which can have multiple rows. Eg:
-
-            <tbody class="js-table-sections-header">One row</tbody>
-            <tbody>Multiple rows</tbody>
-            <tbody class="js-table-sections-header">One row</tbody>
-            <tbody>Multiple rows</tbody>
-            <tbody class="js-table-sections-header">One row</tbody>
-            <tbody>Multiple rows</tbody>
-
-            You can also add the class .open in your tbody.js-table-sections-header to make the next tbody section visible by default
-            -->
-            <table class="table table-hover">
-                <thead>
-                    <tr>
-                        <th style="width: 30px;"></th>
-                        <th>Templates</th>
-                        <th></th>
-                        <th></th>
-                        <th></th>
-                        <th class="hidden-xs" style="width: 220px"></th>
-                    </tr>
-                </thead>
-                <tbody class="js-table-sections-header" ng-repeat-start="t in templates" ng-class="{'open':t.open}" ng-click="toggleForm(t, $event)">
-                    <tr>
-                        <td class="text-center">
-                            <i class="fa fa-angle-right"></i>
-                        </td>
-                        <td class="font-w600" colspan="2">{{t.title}}</td>
-                        <td>
-                            Assign At
-                        </td>
-                        <td>
-                            Last Update
-                        </td>
-                        <td class="hidden-xs" style="width: 220px">
-                            <em class="text-muted">{{t.updated_at|date:'MM/dd/yyyy HH:mm'}}</em> &nbsp;
-                            <button class="btn btn-primary btn-sm" ng-click="assignForm(t)">Assign</button>
-                        </td>
-                    </tr>
-                </tbody>
-                <tbody ng-repeat-end>
-
-
-                    <tr ng-if="t.assign">
-                        <td colspan="6">
-                            <div class="form-group">
-                                <div class="col-sm-2">
-                                    <select class="form-control" ng-model="t.assign.type">
-                                        <option value="new">New Reporter</option>
-                                        <option value="recent">Recent Reporter</option>
-                                    </select>
-                                </div>
-                                <div class="col-sm-8">
-                                    <div class="row" ng-show="t.assign.type === 'new'">
-                                        <div class="col-xs-4">
-                                            <label class="css-input switch switch-info">
-                                                <input type="checkbox" ng-change="printAssign(t)" ng-model="t.assign.createAccount">
-                                                <span></span> Create Account
-                                            </label>
-                                        </div>
-                                        <div class="col-sm-4" ng-show="t.assign.createAccount">
-                                            <input type="email" ng-model="t.assign.email" class="form-control" placeholder="Email">
-                                        </div>
-                                        <div class="col-sm-4" ng-show="t.assign.createAccount">
-                                            <input type=" text " ng-model="t.assign.password" class="form-control " placeholder="Password ">
-                                        </div>
-                                        <div class="col-sm-4 " ng-show="!t.assign.createAccount">
-                                            <input type="text " ng-model="t.assign.firstName" class="form-control" placeholder="First Name ">
-                                        </div>
-                                        <div class="col-sm-4 " ng-show="!t.assign.createAccount">
-                                            <input type="text " ng-model="t.assign.lastName" class="form-control" placeholder="Last Name ">
-                                        </div>
-                                    </div>
-                                    <div class="row " ng-show="t.assign.type==='recent' ">
-                                        <div class="col-xs-6 ">
-                                            <select class="form-control ">
-                                                <option >Mang Yang</option>
-                                            </select>
-                                        </div>
-                                    </div>
-                                </div>
-
-                                <div class="col-sm-2 ">
-                                    <button class="btn btn-primary " ng-click="submitAssignment(t)" ng-disabled="t.assign.isSaving">Send</button>
-                                    <button class="btn btn-danger " ng-click="assignFormCancel(t) " ng-disabled="t.assign.isSaving">Cancel</button>
-                                </div>
-                            </div>
-
-                        </td>
-                    </tr>
-
-                    <tr ng-if="!t.assignments ">
-                        <td class="text-center " colspan="6 ">Loading</td>
-                    </tr>
-
-
-
-                    <tr ng-if="t.assignments && t.assignments.length==0 ">
-                        <td class="text-center " colspan="5 ">No record</td>
-                    </tr>
-                    <tr ng-if="t.assignments && t.assignments.length " ng-repeat="ass in t.assignments ">
-                        <td class="text-center "></td>
-                        <td class="font-w600 ">{{ass.user|name:'email'}}</td>
-                        <td>
-                            <small>
-                                <span class="label label-success ">{{ass.status}}</span>
-                                </small>
-                        </td>
-                        <td>
-                            <small class="text-muted ">{{ass.assignDate|date:'MM/dd/yyyy HH:mm'}}</small>
-                        </td>
-                        <td>
-                            <small class="text-muted ">{{ass.updatedAt|date:'MM/dd/yyyy HH:mm'}}</small>
-                        </td>
-                        <td>
-                            <button class="btn btn-primary btn-xs ">View</button>
-                            <button class="btn btn-success btn-xs ">Download</button>
-                        </td>
-                    </tr>
-                </tbody>
-
-            </table>
-        </div>
-    </div>
-    <!-- END Table Sections -->
-
-</div>
-<!-- END Page Content -->
-
 
 <!-- Page Content -->
 <div class="content content-narrow">
@@ -222,35 +80,29 @@
             <!-- END Icon Tiles -->
 
             <!-- One Row Tiles -->
-            <h2 class="content-heading">Stats</h2>
+            <!--<h2 class="content-heading">Stats</h2>-->
             <div class="content-grid push-50">
 
 
                 <!-- Background Colored Tiles -->
                 <div class="row">
-                    <div class="col-md-4" permission permission-only="'MANAGE_ACCOUNT'">
-                        <a class="block block-link-hover2" ui-sref="layout.user">
+                    <div class="col-md-6" permission permission-only="'MANAGE_ACCOUNT'">
+                        <a class="block block-link-hover2" href="javascript:;" ng-click="clickPTServer()">
                             <div class="block-content block-content-full bg-success clearfix">
-                                <i class="si si-users fa-2x text-white pull-right"></i>
+                                <i class="fa fa-server fa-2x text-white pull-right"></i>
                                 <span class="h4 font-w700 text-white">葡萄服务器</span>
-                                <span class="h4 text-white-op"></span>
+                                <span class="h4 text-white-op">({{ptState|serverStatus}})</span>
+                                <span class="h4 text-white-op" ng-if="ptState==='disconnect'">(点击重连)</span>
                             </div>
                         </a>
                     </div>
-                    <div class="col-md-4">
-                        <a class="block block-link-hover2" ui-sref="layout.transmission">
+                    <div class="col-md-6">
+                        <a class="block block-link-hover2" href="javascript:;" ng-click='clickTransmission()'>
                             <div class="block-content block-content-full bg-primary clearfix">
-                                <i class="si si-envelope fa-2x text-white pull-right"></i>
+                                <i class="si si-arrow-down fa-2x text-white pull-right"></i>
                                 <span class="h4 font-w700 text-white">Transmission</span>
-                                <span class="h4 text-white-op"></span>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="col-md-4">
-                        <a class="block block-link-hover2" ui-sref="layout.template">
-                            <div class="block-content block-content-full bg-amethyst clearfix">
-                                <i class="si si-note fa-2x text-white pull-right"></i>
-                                <span class="h4 font-w700 text-white">{{stats.TEMPLATE}}</span> <span class="h4 text-white-op">Templates</span>
+                                <span class="h4 text-white-op">({{transmissionState|serverStatus}})</span>
+                                <span class="h4 text-white-op" ng-if="transmissionState==='disconnect'">(点击重连)</span>
                             </div>
                         </a>
                     </div>
