--- a/web/index.html
+++ b/web/index.html
@@ -7,7 +7,7 @@
 <head>
     <meta charset="utf-8">
 
-    <title>OneUI - Admin Dashboard Template &amp; UI Framework</title>
+    <title>PT Side Loader</title>
 
     <meta name="description" content="OneUI - Admin Dashboard Template & UI Framework created by pixelcave and published on Themeforest">
     <meta name="author" content="pixelcave">
@@ -88,6 +88,7 @@
     <script src="assets/js/core/jquery.appear.min.js"></script>
     <script src="assets/js/core/jquery.countTo.min.js"></script>
     <script src="assets/js/core/jquery.placeholder.min.js"></script>
+    <script src="assets/js/plugins/bootstrap-notify/bootstrap-notify.min.js"></script>
 
     <!-- OneUI Core JS: AngularJS Related -->
     <script src="assets/js/core/angular.min.js"></script>
@@ -114,6 +115,7 @@
 
     <!--service-->
     <script src="service/http-service.js"></script>
+    <script src="service/ui-service.js"></script>
     <script src="service/user-service.js"></script>
     <script src="service/torrent-service.js"></script>
     <script src="service/socket-service.js"></script>
